force-app/main/default/objects/bofc__Login_Details__c/bofc__Login_Details__c.object-meta.xml
<CustomObject>
    <label>Login Details</label>
    <nameField>
        <label>Login Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Login Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>