force-app/main/default/objects/bofc__Login_Details__c/fields/bofc__Password__c.field-meta.xml
<CustomField>
    <fullName>bofc__Password__c</fullName>
    <label>Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>