force-app/main/default/objects/bofc__Login_Details__c/fields/bofc__Token__c.field-meta.xml
<CustomField>
    <fullName>bofc__Token__c</fullName>
    <label>Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>