force-app/main/default/objects/bofc__Login_Details__c/fields/bofc__Username__c.field-meta.xml
<CustomField>
    <fullName>bofc__Username__c</fullName>
    <label>Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>