force-app/main/default/objects/bofc__Login_Details__c/listViews/bofc__All.listView-meta.xml
<ListView>
    <fullName>bofc__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>